--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
 	 <script type="text/javascript" src="js.js"></script>
 		 <script type="text/javascript" src="jquery.js"></script>
-		 <ul></ul>
        </body>
+	   <div id="ul"></div>
 </html>
